changed source structure

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="dist/css/main.min.css">
 </head>
 <body>
     <header class="header">
@@ -28,11 +28,11 @@
             <a href="#" class="registration_button">Register</a>
             <div class="lang-bar">
                 <button class="eng-lang">
-                    <img src="images/flag eng.png" alt="ENGLISH">
+                    <img src="dist/images/flag eng.png" alt="ENGLISH">
                     ENG
                 </button>
                 <button class="geo-lang active">
-                    <img src="images/flag eng.png" alt="ქართული">
+                    <img src="dist/images/flag eng.png" alt="ქართული">
                     ქართ
                 </button>
             </div>
@@ -168,7 +168,7 @@
                                 <li class="account_info_item_value">
                                     ENG
                                     <button class="account_info_edit">
-                                        <img src="images/icon.png" alt="Edit">    
+                                        <img src="dist/images/icon.png" alt="Edit">    
                                         Edit
                                     </button>
                                 </li>
@@ -189,11 +189,11 @@
                     <h1>ID DOCUMENT</h1>
                     <div class="buttons_container">
                         <button class="document_add">
-                            <img src="images/add.png" alt="Add">
+                            <img src="dist/images/add.png" alt="Add">
                             ADD NEW DOCUMENT
                         </button>
                         <button class="document_instru">
-                            <img src="images/question.png" alt="Instru">
+                            <img src="dist/images/question.png" alt="Instru">
                             Instruction
                         </button>
                     </div>
@@ -326,7 +326,7 @@
                                         </button>
                                     </div>
                                     <button class="edit_button">
-                                        <img src="images/icon.png" alt="Edit">
+                                        <img src="dist/images/icon.png" alt="Edit">
                                         Edit
                                     </button>
                                 </div>
@@ -349,7 +349,7 @@
                                         </button>
                                     </div>
                                     <button class="edit_button">
-                                        <img src="images/icon.png" alt="Edit">
+                                        <img src="dist/images/icon.png" alt="Edit">
                                         Edit
                                     </button>
                                 </div>
@@ -391,32 +391,32 @@
             <ul class="social_ul">
                 <li class="social_li">
                     <a href="#" class="social_link">
-                        <img src="images/facebook.png" class="social_img" alt="Fb">
+                        <img src="dist/images/facebook.png" class="social_img" alt="Fb">
                     </a>
                 </li>
                 <li class="social_li">
                     <a href="#" class="social_link">
-                        <img src="images/twitter.png" class="social_img" alt="twitter">
+                        <img src="dist/images/twitter.png" class="social_img" alt="twitter">
                     </a>
                 </li>
                 <li class="social_li">
                     <a href="#" class="social_link">
-                        <img src="images/G+.png" class="social_img" alt="G+">
+                        <img src="dist/images/G+.png" class="social_img" alt="G+">
                     </a>
                 </li>
                 <li class="social_li">
                     <a href="#" class="social_link">
-                        <img src="images/youtube.png" class="social_img" alt="Y2b">
+                        <img src="dist/images/youtube.png" class="social_img" alt="Y2b">
                     </a>
                 </li>
                 <li class="social_li">
                     <a href="#" class="social_link">
-                        <img src="images/vk.png" class="social_img" alt="VK">
+                        <img src="dist/images/vk.png" class="social_img" alt="VK">
                     </a>
                 </li>
                 <li class="social_li">
                     <a href="#" class="social_link">
-                        <img src="images/ok.png" class="social_img" alt="Ok">
+                        <img src="dist/images/ok.png" class="social_img" alt="Ok">
                     </a>
                 </li>
             </ul>
@@ -437,27 +437,27 @@
         <ul class="partners_ul">
             <li class="partners_li">
                 <a href="#" class="partners_item">
-                    <img src="images/pbox.png" alt="Pbox" class="partners_img">
+                    <img src="dist/images/pbox.png" alt="Pbox" class="partners_img">
                 </a>
             </li>
             <li class="partners_li">
                 <a href="#" class="partners_item">
-                    <img src="images/qwerty.png" alt="qwerty" class="partners_img">
+                    <img src="dist/images/qwerty.png" alt="qwerty" class="partners_img">
                 </a>
             </li>
             <li class="partners_li">
                 <a href="#" class="partners_item">
-                    <img src="images/tbc.png" alt="TBC" class="partners_img">
+                    <img src="dist/images/tbc.png" alt="TBC" class="partners_img">
                 </a>
             </li>
             <li class="partners_li">
                 <a href="#" class="partners_item">
-                    <img src="images/ge.png" alt="Ipay" class="partners_img">
+                    <img src="dist/images/ge.png" alt="Ipay" class="partners_img">
                 </a>
             </li>
             <li class="partners_li">
                 <a href="#" class="partners_item">
-                    <img src="images/Layer76.png" alt="rame" class="partners_img">
+                    <img src="dist/images/Layer76.png" alt="rame" class="partners_img">
                 </a>
             </li>
         </ul>
@@ -473,12 +473,12 @@
             <div class="created_by">
                 Created By:
                 <a href="#">
-                    <img src="images/Singularlogo.png" alt="Singular">
+                    <img src="dist/images/Singularlogo.png" alt="Singular">
                 </a>
             </div>
         </div>
     </footer>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/js.js"></script>
+    <script src="dist/js/jquery-3.3.1.min.js"></script>
+    <script src="dist/js/js.js"></script>
 </body>
 </html>
